finished the styling on mobile and fixed some layout structure issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,14 @@ h1{
     font-family:sans, 'Aclonica';
    
 }
+h3{
+    font-weight:bold;
+    color:rgb(255,255,255);
+    font-family:sans,'Aclonica';
+}
+p{
+    font-size:1.3em;
+}
 header{
     background-color:rgb(0,0,0);
     position:fixed;
@@ -50,6 +58,7 @@ select{
     background-color: rgb(0,0,0);
     color: rgb(255,255,255);
     font-size:1.5em;
+    font-family: san, 'Aclonica';
 
 }
 .nameSection{
